Somwhat Complete... API quota reached on 4 keys... :smile:

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Recast.ly - Recast Yourself</title>
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles/style.css">
-  <script src="https://apis.google.com/js/api.js"></script>
   <script src="node_modules/jquery/dist/jquery.js"></script>
   <script src="node_modules/react/dist/react.js"></script>
   <script src="node_modules/react-dom/dist/react-dom.js"></script>
@@ -20,6 +19,8 @@
       <br/><br/><br/>
     </h5>
   </div>
+  <script type="module" src="src/config/youtube.js"></script>
+  <script type="module" src="src/lib/searchYouTube.js"></script>
   <script type="module" src="compiled/src/components/VideoListEntry.js"></script>
   <script type="module" src="compiled/src/components/VideoList.js"></script>
   <script type="module" src="compiled/src/components/VideoPlayer.js"></script>
